# btop

./: CMakeLists.txt  README.md
.github/workflows/: benchmark.yml  cmake-linux.yml  pgo-validate.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md
.planning/debug/: ctrl-c-hang.md  resume-no-redraw.md  sigusr2-does-nothing.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/milestones/v1.0-phases/01-profiling-baseline/: 01-02-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-string-allocation-reduction/: 02-01-PLAN.md  02-02-PLAN.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-io-data-collection/: 03-01-PLAN.md  03-02-PLAN.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/01-profiling-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md  01-RESEARCH.md  VERIFICATION.md
.planning/phases/02-string-allocation-reduction/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-io-data-collection/: 03-01-SUMMARY.md  03-02-SUMMARY.md
.planning/phases/03.1-profiling-gap-closure/: 03.1-01-SUMMARY.md  03.1-VERIFICATION.md  PROFILING.md
.planning/phases/04-data-structure-modernization/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-SUMMARY.md  04-05-SUMMARY.md  04-MEASUREMENT.md
.planning/phases/05-rendering-pipeline/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md
.planning/phases/06-compiler-verification/: 06-01-SUMMARY.md  06-RESULTS.md
.planning/phases/07-benchmark-integration-fixes/: 07-RESEARCH.md
.planning/phases/08-ci-coverage-documentation-cleanup/: 08-01-SUMMARY.md
.planning/phases/10-name-states/: 10-01-PLAN.md  10-01-SUMMARY.md  10-RESEARCH.md
.planning/phases/11-event-queue/: 11-01-PLAN.md  11-VALIDATION.md
.planning/phases/12-extract-transitions/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-RESEARCH.md
.planning/phases/13-type-safe-states/: 13-02-PLAN.md  13-02-SUMMARY.md  13-RESEARCH.md  13-UAT.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-runner-fsm/: 14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-RESEARCH.md  14-VALIDATION.md
.planning/phases/15-verification/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md
.planning/phases/18-test-doc-hygiene/: 18-01-PLAN.md  18-01-SUMMARY.md  18-RESEARCH.md
.planning/phases/19-performance-measurement/: 19-RESEARCH.md  19-VALIDATION.md  19-VERIFICATION.md
.planning/phases/20-pda-types-skeleton/: 20-01-PLAN.md  20-01-SUMMARY.md  20-RESEARCH.md  20-VALIDATION.md  20-VERIFICATION.md
.planning/phases/21-static-local-migration/: 21-01-SUMMARY.md  21-02-SUMMARY.md  21-RESEARCH.md  21-VALIDATION.md  21-VERIFICATION.md
.planning/phases/22-pda-dispatch/: 22-01-SUMMARY.md  22-02-SUMMARY.md  22-RESEARCH.md  22-VALIDATION.md  22-VERIFICATION.md
.planning/phases/23-input-fsm/: 23-01-PLAN.md  23-01-SUMMARY.md  23-02-PLAN.md  23-02-SUMMARY.md  23-RESEARCH.md
.planning/phases/24-tests/: 24-01-SUMMARY.md  24-02-SUMMARY.md
.planning/phases/25-stale-static-const-fix/: 25-01-SUMMARY.md
.planning/phases/26-themekey-enum-arrays/: 26-01-PLAN.md  26-02-PLAN.md  26-CONTEXT.md
.planning/phases/27-cpu-old-enum-arrays/: 27-01-SUMMARY.md  27-02-SUMMARY.md
.planning/phases/28-hot-path-posix-io/: 28-01-SUMMARY.md  28-02-SUMMARY.md
.planning/phases/29-draw-decomposition/: 29-01-PLAN.md  29-01-SUMMARY.md  29-02-PLAN.md  29-02-SUMMARY.md
.planning/phases/31-dirty-flags-foundation/: 31-01-SUMMARY.md  31-02-SUMMARY.md  31-RESEARCH.md
.planning/phases/32-runner-integration/: 32-01-PLAN.md  32-01-SUMMARY.md  32-RESEARCH.md
.planning/phases/33-calcsizes-decoupling/: 33-01-PLAN.md  33-01-SUMMARY.md
.planning/phases/34-per-box-bool-migration/: 34-01-PLAN.md  34-01-SUMMARY.md
.planning/phases/35-build-compiler/: 35-01-SUMMARY.md  35-02-SUMMARY.md
.planning/phases/36-algorithmic-improvements/: 36-01-PLAN.md  36-01-SUMMARY.md  36-02-PLAN.md  36-02-SUMMARY.md  36-03-PLAN.md  36-03-SUMMARY.md
.planning/phases/37-allocation-parsing/: 37-01-SUMMARY.md  37-02-SUMMARY.md  37-03-SUMMARY.md  37-MIMALLOC-EVALUATION.md
.planning/phases/38-output-pipeline/: 38-01-SUMMARY.md  38-02-SUMMARY.md
.planning/phases/39-platform-io/: 39-01-PLAN.md  39-01-SUMMARY.md  39-02-PLAN.md  39-02-SUMMARY.md  deferred-items.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmark_results/: v12_comparison_report.json  v12_new_bench.json  v12_old_bench.json
benchmarks/: CMakeLists.txt  bench_data_structures.cpp  bench_draw.cpp  bench_proc_collect.cpp  bench_sort.cpp  bench_string_utils.cpp  convert_nanobench_json.py
docs/: PERFORMANCE.md
scripts/: measure_performance.py  pgo-build.sh  profile_hotfunctions.sh
src/: btop.cpp  btop_cli.cpp  btop_cli.hpp  btop_config.cpp  btop_config.hpp  btop_dirty.hpp  btop_draw.cpp  btop_draw.hpp  btop_events.hpp  btop_input.cpp  btop_input.hpp  btop_menu.cpp  btop_menu.hpp  btop_menu_pda.hpp  btop_shared.cpp  btop_shared.hpp  btop_state.hpp  btop_theme.cpp  btop_theme.hpp  btop_tools.cpp  btop_tools.hpp
src/freebsd/: btop_collect.cpp
src/linux/: btop_collect.cpp  io_uring_reader.cpp  io_uring_reader.hpp
src/netbsd/: btop_collect.cpp
src/openbsd/: btop_collect.cpp
src/osx/: btop_collect.cpp  sensors.cpp  smc.cpp  smc.hpp
tests/: CMakeLists.txt  test_app_state.cpp  test_arena.cpp  test_dirty.cpp  test_draw_buffer.cpp  test_enum_arrays.cpp  test_events.cpp  test_graph_cache.cpp  test_input_fsm.cpp  test_menu_pda.cpp  test_pda_invariants.cpp  test_proc_reader.cpp  test_ring_buffer.cpp  test_runner_state.cpp  test_screen_buffer.cpp  test_smc_cache.cpp  test_transitions.cpp  test_uncolor.cpp  test_write_stdout.cpp
(+53 files in other folders)
